add new api endpoints
