# src/Api/ApiServer.php
@@ -4,8 +4,20 @@
 namespace App\Api;
 
 
+use App\Api\Implementation\AgnesBase;
+
 class ApiServer
 {
+    /**
+     * @var DeployApiInterface
+     */
+    private $deployApi;
+
+    /**
+     * @var InstanceApiInterface
+     */
+    private $instanceApi;
+
     /**
      * @var ReleaseApiInterface
      */
@@ -13,21 +25,29 @@ class ApiServer
 
     /**
      * ApiServer constructor.
+     * @param DeployApiInterface $deployApi
+     * @param InstanceApiInterface $instanceApi
      * @param ReleaseApiInterface $releaseApi
      */
-    public function __construct(ReleaseApiInterface $releaseApi)
+    public function __construct(DeployApiInterface $deployApi, InstanceApiInterface $instanceApi, ReleaseApiInterface $releaseApi)
     {
+        $this->deployApi = $deployApi;
+        $this->instanceApi = $instanceApi;
         $this->releaseApi = $releaseApi;
     }
 
     /**
      * @param string $name
-     * @return ReleaseApiInterface
+     * @return mixed
      * @throws \Exception
      */
     public function getApiHandler(string $name)
     {
         switch ($name) {
+            case "deploy":
+                return $this->deployApi;
+            case "instance":
+                return $this->instanceApi;
             case "release":
                 return $this->releaseApi;
             default:
