# src/Controller/InstanceController.php
@@ -1,7 +1,7 @@
 <?php
 
 /**
- * ReleaseController
+ * InstanceController
  * PHP version 5
  *
  * @category Class
@@ -35,101 +35,24 @@ use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\HttpKernel\Exception\HttpException;
 use Symfony\Component\Validator\Constraints as Assert;
-use App\Api\ReleaseApiInterface;
-use App\Model\Release;
+use App\Api\InstanceApiInterface;
+use App\Model\Instance;
 
 /**
- * ReleaseController Class Doc Comment
+ * InstanceController Class Doc Comment
  *
  * @category Class
  * @package  App\Controller
  * @author   OpenAPI Generator team
  * @link     https://github.com/openapitools/openapi-generator
  */
-class ReleaseController extends Controller
+class InstanceController extends Controller
 {
-
-    /**
-     * Operation add
-     *
-     * Add a new release
-     *
-     * @param Request $request The Symfony request to handle.
-     * @return Response The Symfony response.
-     */
-    public function addAction(Request $request)
-    {
-        // Make sure that the client is providing something that we can consume
-        $consumes = ['application/json'];
-        $inputFormat = $request->headers->has('Content-Type')?$request->headers->get('Content-Type'):$consumes[0];
-        if (!in_array($inputFormat, $consumes)) {
-            // We can't consume the content that the client is sending us
-            return new Response('', 415);
-        }
-
-        // Handle authentication
-
-        // Read out all input parameter values into variables
-        $release = $request->getContent();
-
-        // Use the default value if no value was provided
-
-        // Deserialize the input values that needs it
-        try {
-            $release = $this->deserialize($release, 'App\Model\Release', $inputFormat);
-        } catch (SerializerRuntimeException $exception) {
-            return $this->createBadRequestResponse($exception->getMessage());
-        }
-
-        // Validate the input values
-        $asserts = [];
-        $asserts[] = new Assert\NotNull();
-        $asserts[] = new Assert\Type("App\Model\Release");
-        $asserts[] = new Assert\Valid();
-        $response = $this->validate($release, $asserts);
-        if ($response instanceof Response) {
-            return $response;
-        }
-
-
-        try {
-            $handler = $this->getApiHandler();
-
-            
-            // Make the call to the business logic
-            $responseCode = 204;
-            $responseHeaders = [];
-            $result = $handler->add($release, $responseCode, $responseHeaders);
-
-            // Find default response message
-            $message = 'Created';
-
-            // Find a more specific message, if available
-            switch ($responseCode) {
-                case 201:
-                    $message = 'Created';
-                    break;
-            }
-
-            return new Response(
-                '',
-                $responseCode,
-                array_merge(
-                    $responseHeaders,
-                    [
-                        'X-OpenAPI-Message' => $message
-                    ]
-                )
-            );
-        } catch (Exception $fallthrough) {
-            return $this->createErrorResponse(new HttpException(500, 'An unsuspected error occurred.', $fallthrough));
-        }
-    }
 
     /**
      * Operation getAll
      *
-     * Gets all releases
+     * gets all instances
      *
      * @param Request $request The Symfony request to handle.
      * @return Response The Symfony response.
@@ -191,10 +114,10 @@ class ReleaseController extends Controller
 
     /**
      * Returns the handler for this API controller.
-     * @return ReleaseApiInterface
+     * @return InstanceApiInterface
      */
     public function getApiHandler()
     {
-        return $this->apiServer->getApiHandler('release');
+        return $this->apiServer->getApiHandler('instance');
     }
 }
