# src/Model/Installation.php
@@ -1,0 +1,86 @@
+<?php
+/**
+ * Installation
+ *
+ * PHP version 5
+ *
+ * @category Class
+ * @package  App\Model
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * Agnes UI
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ * Do not edit the class manually.
+ */
+
+namespace App\Model;
+
+use Symfony\Component\Validator\Constraints as Assert;
+use JMS\Serializer\Annotation\Type;
+use JMS\Serializer\Annotation\SerializedName;
+
+/**
+ * Class representing the Installation model.
+ *
+ * @package App\Model
+ * @author  OpenAPI Generator team
+ */
+class Installation 
+{
+        /**
+     * @var App\Model\Release|null
+     * @SerializedName("release")
+     * @Assert\Type("App\Model\Release")
+     * @Type("App\Model\Release")
+     */
+    protected $release;
+
+    /**
+     * Constructor
+     * @param mixed[] $data Associated array of property values initializing the model
+     */
+    public function __construct(array $data = null)
+    {
+        $this->release = isset($data['release']) ? $data['release'] : null;
+    }
+
+    /**
+     * Gets release.
+     *
+     * @return App\Model\Release|null
+     */
+    public function getRelease()
+    {
+        return $this->release;
+    }
+
+    /**
+     * Sets release.
+     *
+     * @param App\Model\Release|null $release
+     *
+     * @return $this
+     */
+    public function setRelease(Release $release = null)
+    {
+        $this->release = $release;
+
+        return $this;
+    }
+}
+
+
