# src/Model/Instance.php
@@ -1,0 +1,188 @@
+<?php
+/**
+ * Instance
+ *
+ * PHP version 5
+ *
+ * @category Class
+ * @package  App\Model
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * Agnes UI
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ * Do not edit the class manually.
+ */
+
+namespace App\Model;
+
+use Symfony\Component\Validator\Constraints as Assert;
+use JMS\Serializer\Annotation\Type;
+use JMS\Serializer\Annotation\SerializedName;
+
+/**
+ * Class representing the Instance model.
+ *
+ * @package App\Model
+ * @author  OpenAPI Generator team
+ */
+class Instance 
+{
+        /**
+     * @var string
+     * @SerializedName("server")
+     * @Assert\NotNull()
+     * @Assert\Type("string")
+     * @Type("string")
+     */
+    protected $server;
+
+    /**
+     * @var string
+     * @SerializedName("environment")
+     * @Assert\NotNull()
+     * @Assert\Type("string")
+     * @Type("string")
+     */
+    protected $environment;
+
+    /**
+     * @var string
+     * @SerializedName("stage")
+     * @Assert\NotNull()
+     * @Assert\Type("string")
+     * @Type("string")
+     */
+    protected $stage;
+
+    /**
+     * @var string|null
+     * @SerializedName("currentReleaseName")
+     * @Assert\Type("string")
+     * @Type("string")
+     */
+    protected $currentReleaseName;
+
+    /**
+     * Constructor
+     * @param mixed[] $data Associated array of property values initializing the model
+     */
+    public function __construct(array $data = null)
+    {
+        $this->server = isset($data['server']) ? $data['server'] : null;
+        $this->environment = isset($data['environment']) ? $data['environment'] : null;
+        $this->stage = isset($data['stage']) ? $data['stage'] : null;
+        $this->currentReleaseName = isset($data['currentReleaseName']) ? $data['currentReleaseName'] : null;
+    }
+
+    /**
+     * Gets server.
+     *
+     * @return string
+     */
+    public function getServer()
+    {
+        return $this->server;
+    }
+
+    /**
+     * Sets server.
+     *
+     * @param string $server
+     *
+     * @return $this
+     */
+    public function setServer($server)
+    {
+        $this->server = $server;
+
+        return $this;
+    }
+
+    /**
+     * Gets environment.
+     *
+     * @return string
+     */
+    public function getEnvironment()
+    {
+        return $this->environment;
+    }
+
+    /**
+     * Sets environment.
+     *
+     * @param string $environment
+     *
+     * @return $this
+     */
+    public function setEnvironment($environment)
+    {
+        $this->environment = $environment;
+
+        return $this;
+    }
+
+    /**
+     * Gets stage.
+     *
+     * @return string
+     */
+    public function getStage()
+    {
+        return $this->stage;
+    }
+
+    /**
+     * Sets stage.
+     *
+     * @param string $stage
+     *
+     * @return $this
+     */
+    public function setStage($stage)
+    {
+        $this->stage = $stage;
+
+        return $this;
+    }
+
+    /**
+     * Gets currentReleaseName.
+     *
+     * @return string|null
+     */
+    public function getCurrentReleaseName()
+    {
+        return $this->currentReleaseName;
+    }
+
+    /**
+     * Sets currentReleaseName.
+     *
+     * @param string|null $currentReleaseName
+     *
+     * @return $this
+     */
+    public function setCurrentReleaseName($currentReleaseName = null)
+    {
+        $this->currentReleaseName = $currentReleaseName;
+
+        return $this;
+    }
+}
+
+
